# schwab_bot

./: .env.example  .gitignore  Cargo.toml  IBKR_INTEGRATION.md  README.md
self_certs_dir/: cert.pem  key.pem
src/: execute_strategy.rs  ibkr.rs  main.rs  models.rs  schwab.rs  schwab_execute_strategy.rs  schwab_pos.rs  trading_bot.rs
