[package]
name = "schwab_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
schwab_api = "0.0.2"
ibapi = { git = "https://github.com/wboayue/rust-ibapi", features = ["async"] }
tokio-stream = "0.1"
async-channel = "2.3"
axum = { version = "0.7" }
axum-server = "0.6"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
dirs = "5"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
oauth2 = "4"
dotenv = "0.15"
telegram-bot = { path = "../telegram-bot" }
teloxide = { version = "0.17", features = ["macros"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"

